{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 505,
  "lineage": "5505a309-6cd4-0471-258a-b4c9ddea2b17",
  "resources": [
    {
      "module": "module.elb.module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382472914:loadbalancer/dev-vpc-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-vpc-elb-759352297.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 3,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "dev-vpc-elb",
            "idle_timeout": 60,
            "instances": [
              "i-08265465764e9a240",
              "i-0dc6dd268092b0787"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "dev-vpc-elb",
            "region": "us-east-1",
            "security_groups": [
              "sg-019ebb6cd96d26838"
            ],
            "source_security_group": "992382472914/dev-vpc-elb-sg-20260624092802522600000008",
            "source_security_group_id": "sg-019ebb6cd96d26838",
            "subnets": [
              "subnet-0237be38de446a07a",
              "subnet-09bf224908a0c4ea4"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-elb",
              "Project": "nginx-webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-elb",
              "Project": "nginx-webserver"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "name": "dev-vpc-elb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.elb_security_group.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:security-group/sg-019ebb6cd96d26838",
            "description": "Security group for public ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow HTTP to backend EC2 instances in VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-019ebb6cd96d26838",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-vpc-elb-sg-20260624092802522600000008",
            "name_prefix": "dev-vpc-elb-sg-",
            "owner_id": "992382472914",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "nginx-webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "nginx-webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be0b95a6f9abeb12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "sg-019ebb6cd96d26838",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elb_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http_to_backends",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:security-group-rule/sgr-0707cf377f1e50a15",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow HTTP to backend EC2 instances in VPC",
            "from_port": 80,
            "id": "sgr-0707cf377f1e50a15",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-019ebb6cd96d26838",
            "security_group_rule_id": "sgr-0707cf377f1e50a15",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "http_to_backends",
              "Project": "nginx-webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "http_to_backends",
              "Project": "nginx-webserver"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "sgr-0707cf377f1e50a15",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.elb_security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:security-group-rule/sgr-0de19aff774ad49b4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP traffic from anywhere",
            "from_port": 80,
            "id": "sgr-0de19aff774ad49b4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-019ebb6cd96d26838",
            "security_group_rule_id": "sgr-0de19aff774ad49b4",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "http",
              "Project": "nginx-webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "http",
              "Project": "nginx-webserver"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "sgr-0de19aff774ad49b4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.elb_security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:security-group-rule/sgr-00630304978cceead",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTPS traffic from anywhere",
            "from_port": 443,
            "id": "sgr-00630304978cceead",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-019ebb6cd96d26838",
            "security_group_rule_id": "sgr-00630304978cceead",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "https",
              "Project": "nginx-webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "https",
              "Project": "nginx-webserver"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "sgr-00630304978cceead",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.elb_security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_ec2_instances[\"1\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:subnet/subnet-09bf224908a0c4ea4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bf224908a0c4ea4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382472914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-public-us-east-1a",
              "Project": "nginx-webserver"
            },
            "vpc_id": "vpc-0be0b95a6f9abeb12"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nginx_ec2_instances[\"1\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00948338a4aeec604",
            "arn": "arn:aws:ec2:us-east-1:992382472914:instance/i-08265465764e9a240",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-nginx-web-role-1-20260624092757025500000005",
            "id": "i-08265465764e9a240",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-086b48ad96a1588ea"
              }
            ],
            "primary_network_interface_id": "eni-086b48ad96a1588ea",
            "private_dns": "ip-10-0-1-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.8",
            "public_dns": "ec2-107-23-230-154.compute-1.amazonaws.com",
            "public_ip": "107.23.230.154",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:992382472914:key/da186cca-bbd4-4416-b98d-3e32302b01ea",
                "throughput": 125,
                "volume_id": "vol-04d05ea22460f2493",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09bf224908a0c4ea4",
            "tags": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-1",
              "Project": "nginx-webserver",
              "S3Access": "YES",
              "Server": "1"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-1",
              "Project": "nginx-webserver",
              "S3Access": "YES",
              "Server": "1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-1",
              "Project": "nginx-webserver",
              "S3Access": "YES",
              "Server": "1"
            },
            "vpc_security_group_ids": [
              "sg-0ffde1e4073c31901"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "i-08265465764e9a240",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nginx_ec2_instances.aws_iam_instance_profile.this",
            "module.nginx_ec2_instances.aws_iam_role.this",
            "module.nginx_ec2_instances.aws_security_group.this",
            "module.nginx_ec2_instances.data.aws_iam_policy_document.assume_role_policy",
            "module.nginx_ec2_instances.data.aws_partition.current",
            "module.nginx_ec2_instances.data.aws_ssm_parameter.this",
            "module.nginx_ec2_instances.data.aws_subnet.this",
            "module.nginx_web_role_1.aws_iam_instance_profile.this",
            "module.nginx_web_role_1.aws_iam_role.this",
            "module.nginx_web_role_1.data.aws_caller_identity.current",
            "module.nginx_web_role_1.data.aws_iam_policy_document.this",
            "module.nginx_web_role_1.data.aws_partition.current",
            "module.nginx_web_role_2.aws_iam_instance_profile.this",
            "module.nginx_web_role_2.aws_iam_role.this",
            "module.nginx_web_role_2.data.aws_caller_identity.current",
            "module.nginx_web_role_2.data.aws_iam_policy_document.this",
            "module.nginx_web_role_2.data.aws_partition.current",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_ec2_instances[\"1\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:security-group/sg-0ffde1e4073c31901",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IPv4 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow all IPv6 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffde1e4073c31901",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from 0.0.0.0/0",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-nginx-server-1-sg-20260624092805401300000009",
            "name_prefix": "dev-nginx-server-1-sg-",
            "owner_id": "992382472914",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-1-sg",
              "Project": "nginx-webserver",
              "S3Access": "YES",
              "Server": "1"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-1-sg",
              "Project": "nginx-webserver",
              "S3Access": "YES",
              "Server": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be0b95a6f9abeb12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "sg-0ffde1e4073c31901",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nginx_ec2_instances.data.aws_subnet.this",
            "module.nginx_web_role_1.aws_iam_instance_profile.this",
            "module.nginx_web_role_1.aws_iam_role.this",
            "module.nginx_web_role_1.data.aws_caller_identity.current",
            "module.nginx_web_role_1.data.aws_iam_policy_document.this",
            "module.nginx_web_role_1.data.aws_partition.current",
            "module.nginx_web_role_2.aws_iam_instance_profile.this",
            "module.nginx_web_role_2.aws_iam_role.this",
            "module.nginx_web_role_2.data.aws_caller_identity.current",
            "module.nginx_web_role_2.data.aws_iam_policy_document.this",
            "module.nginx_web_role_2.data.aws_partition.current",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nginx_ec2_instances[\"1\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:security-group-rule/sgr-068a199510112d093",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-068a199510112d093",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ffde1e4073c31901",
            "security_group_rule_id": "sgr-068a199510112d093",
            "tags": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-1-sg-ipv4_default",
              "Project": "nginx-webserver",
              "S3Access": "YES",
              "Server": "1"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-1-sg-ipv4_default",
              "Project": "nginx-webserver",
              "S3Access": "YES",
              "Server": "1"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "sgr-068a199510112d093",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nginx_ec2_instances.aws_security_group.this",
            "module.nginx_ec2_instances.data.aws_subnet.this",
            "module.nginx_web_role_1.aws_iam_instance_profile.this",
            "module.nginx_web_role_1.aws_iam_role.this",
            "module.nginx_web_role_1.data.aws_caller_identity.current",
            "module.nginx_web_role_1.data.aws_iam_policy_document.this",
            "module.nginx_web_role_1.data.aws_partition.current",
            "module.nginx_web_role_2.aws_iam_instance_profile.this",
            "module.nginx_web_role_2.aws_iam_role.this",
            "module.nginx_web_role_2.data.aws_caller_identity.current",
            "module.nginx_web_role_2.data.aws_iam_policy_document.this",
            "module.nginx_web_role_2.data.aws_partition.current",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:security-group-rule/sgr-08eac499b0abd2393",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-08eac499b0abd2393",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ffde1e4073c31901",
            "security_group_rule_id": "sgr-08eac499b0abd2393",
            "tags": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-1-sg-ipv6_default",
              "Project": "nginx-webserver",
              "S3Access": "YES",
              "Server": "1"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-1-sg-ipv6_default",
              "Project": "nginx-webserver",
              "S3Access": "YES",
              "Server": "1"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "sgr-08eac499b0abd2393",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nginx_ec2_instances.aws_security_group.this",
            "module.nginx_ec2_instances.data.aws_subnet.this",
            "module.nginx_web_role_1.aws_iam_instance_profile.this",
            "module.nginx_web_role_1.aws_iam_role.this",
            "module.nginx_web_role_1.data.aws_caller_identity.current",
            "module.nginx_web_role_1.data.aws_iam_policy_document.this",
            "module.nginx_web_role_1.data.aws_partition.current",
            "module.nginx_web_role_2.aws_iam_instance_profile.this",
            "module.nginx_web_role_2.aws_iam_role.this",
            "module.nginx_web_role_2.data.aws_caller_identity.current",
            "module.nginx_web_role_2.data.aws_iam_policy_document.this",
            "module.nginx_web_role_2.data.aws_partition.current",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_ec2_instances[\"1\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:security-group-rule/sgr-070df2c007f636c49",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP traffic",
            "from_port": 80,
            "id": "sgr-070df2c007f636c49",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ffde1e4073c31901",
            "security_group_rule_id": "sgr-070df2c007f636c49",
            "tags": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-1-sg-http",
              "Project": "nginx-webserver",
              "S3Access": "YES",
              "Server": "1"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-1-sg-http",
              "Project": "nginx-webserver",
              "S3Access": "YES",
              "Server": "1"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "sgr-070df2c007f636c49",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nginx_ec2_instances.aws_security_group.this",
            "module.nginx_ec2_instances.data.aws_subnet.this",
            "module.nginx_web_role_1.aws_iam_instance_profile.this",
            "module.nginx_web_role_1.aws_iam_role.this",
            "module.nginx_web_role_1.data.aws_caller_identity.current",
            "module.nginx_web_role_1.data.aws_iam_policy_document.this",
            "module.nginx_web_role_1.data.aws_partition.current",
            "module.nginx_web_role_2.aws_iam_instance_profile.this",
            "module.nginx_web_role_2.aws_iam_role.this",
            "module.nginx_web_role_2.data.aws_caller_identity.current",
            "module.nginx_web_role_2.data.aws_iam_policy_document.this",
            "module.nginx_web_role_2.data.aws_partition.current",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:security-group-rule/sgr-04cf9db1a85a52661",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTPS traffic",
            "from_port": 443,
            "id": "sgr-04cf9db1a85a52661",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ffde1e4073c31901",
            "security_group_rule_id": "sgr-04cf9db1a85a52661",
            "tags": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-1-sg-https",
              "Project": "nginx-webserver",
              "S3Access": "YES",
              "Server": "1"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-1-sg-https",
              "Project": "nginx-webserver",
              "S3Access": "YES",
              "Server": "1"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "sgr-04cf9db1a85a52661",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nginx_ec2_instances.aws_security_group.this",
            "module.nginx_ec2_instances.data.aws_subnet.this",
            "module.nginx_web_role_1.aws_iam_instance_profile.this",
            "module.nginx_web_role_1.aws_iam_role.this",
            "module.nginx_web_role_1.data.aws_caller_identity.current",
            "module.nginx_web_role_1.data.aws_iam_policy_document.this",
            "module.nginx_web_role_1.data.aws_partition.current",
            "module.nginx_web_role_2.aws_iam_instance_profile.this",
            "module.nginx_web_role_2.aws_iam_role.this",
            "module.nginx_web_role_2.data.aws_caller_identity.current",
            "module.nginx_web_role_2.data.aws_iam_policy_document.this",
            "module.nginx_web_role_2.data.aws_partition.current",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ssh_0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:security-group-rule/sgr-0b49d9d8a4f2518a7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow SSH from 0.0.0.0/0",
            "from_port": 22,
            "id": "sgr-0b49d9d8a4f2518a7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ffde1e4073c31901",
            "security_group_rule_id": "sgr-0b49d9d8a4f2518a7",
            "tags": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-1-sg-ssh_0",
              "Project": "nginx-webserver",
              "S3Access": "YES",
              "Server": "1"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-1-sg-ssh_0",
              "Project": "nginx-webserver",
              "S3Access": "YES",
              "Server": "1"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "sgr-0b49d9d8a4f2518a7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nginx_ec2_instances.aws_security_group.this",
            "module.nginx_ec2_instances.data.aws_subnet.this",
            "module.nginx_web_role_1.aws_iam_instance_profile.this",
            "module.nginx_web_role_1.aws_iam_role.this",
            "module.nginx_web_role_1.data.aws_caller_identity.current",
            "module.nginx_web_role_1.data.aws_iam_policy_document.this",
            "module.nginx_web_role_1.data.aws_partition.current",
            "module.nginx_web_role_2.aws_iam_instance_profile.this",
            "module.nginx_web_role_2.aws_iam_role.this",
            "module.nginx_web_role_2.data.aws_caller_identity.current",
            "module.nginx_web_role_2.data.aws_iam_policy_document.this",
            "module.nginx_web_role_2.data.aws_partition.current",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_ec2_instances[\"2\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:subnet/subnet-0237be38de446a07a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0237be38de446a07a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382472914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-public-us-east-1b",
              "Project": "nginx-webserver"
            },
            "vpc_id": "vpc-0be0b95a6f9abeb12"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nginx_ec2_instances[\"2\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00948338a4aeec604",
            "arn": "arn:aws:ec2:us-east-1:992382472914:instance/i-0dc6dd268092b0787",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-nginx-web-role-2-20260624092756996200000003",
            "id": "i-0dc6dd268092b0787",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-007770bc857ee296f"
              }
            ],
            "primary_network_interface_id": "eni-007770bc857ee296f",
            "private_dns": "ip-10-0-2-196.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.196",
            "public_dns": "ec2-34-206-53-239.compute-1.amazonaws.com",
            "public_ip": "34.206.53.239",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:992382472914:key/da186cca-bbd4-4416-b98d-3e32302b01ea",
                "throughput": 125,
                "volume_id": "vol-01dbc13139d404fc6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0237be38de446a07a",
            "tags": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-2",
              "Project": "nginx-webserver",
              "S3Access": "NO",
              "Server": "2"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-2",
              "Project": "nginx-webserver",
              "S3Access": "NO",
              "Server": "2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-2",
              "Project": "nginx-webserver",
              "S3Access": "NO",
              "Server": "2"
            },
            "vpc_security_group_ids": [
              "sg-03181f0ae28d746e4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "i-0dc6dd268092b0787",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nginx_ec2_instances.aws_iam_instance_profile.this",
            "module.nginx_ec2_instances.aws_iam_role.this",
            "module.nginx_ec2_instances.aws_security_group.this",
            "module.nginx_ec2_instances.data.aws_iam_policy_document.assume_role_policy",
            "module.nginx_ec2_instances.data.aws_partition.current",
            "module.nginx_ec2_instances.data.aws_ssm_parameter.this",
            "module.nginx_ec2_instances.data.aws_subnet.this",
            "module.nginx_web_role_1.aws_iam_instance_profile.this",
            "module.nginx_web_role_1.aws_iam_role.this",
            "module.nginx_web_role_1.data.aws_caller_identity.current",
            "module.nginx_web_role_1.data.aws_iam_policy_document.this",
            "module.nginx_web_role_1.data.aws_partition.current",
            "module.nginx_web_role_2.aws_iam_instance_profile.this",
            "module.nginx_web_role_2.aws_iam_role.this",
            "module.nginx_web_role_2.data.aws_caller_identity.current",
            "module.nginx_web_role_2.data.aws_iam_policy_document.this",
            "module.nginx_web_role_2.data.aws_partition.current",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_ec2_instances[\"2\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:security-group/sg-03181f0ae28d746e4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IPv4 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow all IPv6 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03181f0ae28d746e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from 0.0.0.0/0",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-nginx-server-2-sg-2026062409280540130000000a",
            "name_prefix": "dev-nginx-server-2-sg-",
            "owner_id": "992382472914",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-2-sg",
              "Project": "nginx-webserver",
              "S3Access": "NO",
              "Server": "2"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-2-sg",
              "Project": "nginx-webserver",
              "S3Access": "NO",
              "Server": "2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be0b95a6f9abeb12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "sg-03181f0ae28d746e4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nginx_ec2_instances.data.aws_subnet.this",
            "module.nginx_web_role_1.aws_iam_instance_profile.this",
            "module.nginx_web_role_1.aws_iam_role.this",
            "module.nginx_web_role_1.data.aws_caller_identity.current",
            "module.nginx_web_role_1.data.aws_iam_policy_document.this",
            "module.nginx_web_role_1.data.aws_partition.current",
            "module.nginx_web_role_2.aws_iam_instance_profile.this",
            "module.nginx_web_role_2.aws_iam_role.this",
            "module.nginx_web_role_2.data.aws_caller_identity.current",
            "module.nginx_web_role_2.data.aws_iam_policy_document.this",
            "module.nginx_web_role_2.data.aws_partition.current",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nginx_ec2_instances[\"2\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:security-group-rule/sgr-08d174086c4ebf44a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-08d174086c4ebf44a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-03181f0ae28d746e4",
            "security_group_rule_id": "sgr-08d174086c4ebf44a",
            "tags": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-2-sg-ipv4_default",
              "Project": "nginx-webserver",
              "S3Access": "NO",
              "Server": "2"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-2-sg-ipv4_default",
              "Project": "nginx-webserver",
              "S3Access": "NO",
              "Server": "2"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "sgr-08d174086c4ebf44a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nginx_ec2_instances.aws_security_group.this",
            "module.nginx_ec2_instances.data.aws_subnet.this",
            "module.nginx_web_role_1.aws_iam_instance_profile.this",
            "module.nginx_web_role_1.aws_iam_role.this",
            "module.nginx_web_role_1.data.aws_caller_identity.current",
            "module.nginx_web_role_1.data.aws_iam_policy_document.this",
            "module.nginx_web_role_1.data.aws_partition.current",
            "module.nginx_web_role_2.aws_iam_instance_profile.this",
            "module.nginx_web_role_2.aws_iam_role.this",
            "module.nginx_web_role_2.data.aws_caller_identity.current",
            "module.nginx_web_role_2.data.aws_iam_policy_document.this",
            "module.nginx_web_role_2.data.aws_partition.current",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:security-group-rule/sgr-090f2b5b22b5e25b2",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-090f2b5b22b5e25b2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-03181f0ae28d746e4",
            "security_group_rule_id": "sgr-090f2b5b22b5e25b2",
            "tags": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-2-sg-ipv6_default",
              "Project": "nginx-webserver",
              "S3Access": "NO",
              "Server": "2"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-2-sg-ipv6_default",
              "Project": "nginx-webserver",
              "S3Access": "NO",
              "Server": "2"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "sgr-090f2b5b22b5e25b2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nginx_ec2_instances.aws_security_group.this",
            "module.nginx_ec2_instances.data.aws_subnet.this",
            "module.nginx_web_role_1.aws_iam_instance_profile.this",
            "module.nginx_web_role_1.aws_iam_role.this",
            "module.nginx_web_role_1.data.aws_caller_identity.current",
            "module.nginx_web_role_1.data.aws_iam_policy_document.this",
            "module.nginx_web_role_1.data.aws_partition.current",
            "module.nginx_web_role_2.aws_iam_instance_profile.this",
            "module.nginx_web_role_2.aws_iam_role.this",
            "module.nginx_web_role_2.data.aws_caller_identity.current",
            "module.nginx_web_role_2.data.aws_iam_policy_document.this",
            "module.nginx_web_role_2.data.aws_partition.current",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_ec2_instances[\"2\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:security-group-rule/sgr-00f5f2cb8aed1bb2e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP traffic",
            "from_port": 80,
            "id": "sgr-00f5f2cb8aed1bb2e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-03181f0ae28d746e4",
            "security_group_rule_id": "sgr-00f5f2cb8aed1bb2e",
            "tags": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-2-sg-http",
              "Project": "nginx-webserver",
              "S3Access": "NO",
              "Server": "2"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-2-sg-http",
              "Project": "nginx-webserver",
              "S3Access": "NO",
              "Server": "2"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "sgr-00f5f2cb8aed1bb2e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nginx_ec2_instances.aws_security_group.this",
            "module.nginx_ec2_instances.data.aws_subnet.this",
            "module.nginx_web_role_1.aws_iam_instance_profile.this",
            "module.nginx_web_role_1.aws_iam_role.this",
            "module.nginx_web_role_1.data.aws_caller_identity.current",
            "module.nginx_web_role_1.data.aws_iam_policy_document.this",
            "module.nginx_web_role_1.data.aws_partition.current",
            "module.nginx_web_role_2.aws_iam_instance_profile.this",
            "module.nginx_web_role_2.aws_iam_role.this",
            "module.nginx_web_role_2.data.aws_caller_identity.current",
            "module.nginx_web_role_2.data.aws_iam_policy_document.this",
            "module.nginx_web_role_2.data.aws_partition.current",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:security-group-rule/sgr-05e9894d710d52d9b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTPS traffic",
            "from_port": 443,
            "id": "sgr-05e9894d710d52d9b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-03181f0ae28d746e4",
            "security_group_rule_id": "sgr-05e9894d710d52d9b",
            "tags": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-2-sg-https",
              "Project": "nginx-webserver",
              "S3Access": "NO",
              "Server": "2"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-2-sg-https",
              "Project": "nginx-webserver",
              "S3Access": "NO",
              "Server": "2"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "sgr-05e9894d710d52d9b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nginx_ec2_instances.aws_security_group.this",
            "module.nginx_ec2_instances.data.aws_subnet.this",
            "module.nginx_web_role_1.aws_iam_instance_profile.this",
            "module.nginx_web_role_1.aws_iam_role.this",
            "module.nginx_web_role_1.data.aws_caller_identity.current",
            "module.nginx_web_role_1.data.aws_iam_policy_document.this",
            "module.nginx_web_role_1.data.aws_partition.current",
            "module.nginx_web_role_2.aws_iam_instance_profile.this",
            "module.nginx_web_role_2.aws_iam_role.this",
            "module.nginx_web_role_2.data.aws_caller_identity.current",
            "module.nginx_web_role_2.data.aws_iam_policy_document.this",
            "module.nginx_web_role_2.data.aws_partition.current",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ssh_0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:security-group-rule/sgr-00a3a80a18d4e1931",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow SSH from 0.0.0.0/0",
            "from_port": 22,
            "id": "sgr-00a3a80a18d4e1931",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-03181f0ae28d746e4",
            "security_group_rule_id": "sgr-00a3a80a18d4e1931",
            "tags": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-2-sg-ssh_0",
              "Project": "nginx-webserver",
              "S3Access": "NO",
              "Server": "2"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nginx-server-2-sg-ssh_0",
              "Project": "nginx-webserver",
              "S3Access": "NO",
              "Server": "2"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "sgr-00a3a80a18d4e1931",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nginx_ec2_instances.aws_security_group.this",
            "module.nginx_ec2_instances.data.aws_subnet.this",
            "module.nginx_web_role_1.aws_iam_instance_profile.this",
            "module.nginx_web_role_1.aws_iam_role.this",
            "module.nginx_web_role_1.data.aws_caller_identity.current",
            "module.nginx_web_role_1.data.aws_iam_policy_document.this",
            "module.nginx_web_role_1.data.aws_partition.current",
            "module.nginx_web_role_2.aws_iam_instance_profile.this",
            "module.nginx_web_role_2.aws_iam_role.this",
            "module.nginx_web_role_2.data.aws_caller_identity.current",
            "module.nginx_web_role_2.data.aws_iam_policy_document.this",
            "module.nginx_web_role_2.data.aws_partition.current",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:network-acl/acl-0c3714a6ec5ccb651",
            "default_network_acl_id": "acl-0c3714a6ec5ccb651",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c3714a6ec5ccb651",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "992382472914",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-0237be38de446a07a",
              "subnet-09bf224908a0c4ea4",
              "subnet-0cea3f1ea0d9789ed",
              "subnet-0f17fecb53ee6fd95"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-default",
              "Project": "nginx-webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-default",
              "Project": "nginx-webserver"
            },
            "vpc_id": "vpc-0be0b95a6f9abeb12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:route-table/rtb-010e6f3cf00d08042",
            "default_route_table_id": "rtb-010e6f3cf00d08042",
            "id": "rtb-010e6f3cf00d08042",
            "owner_id": "992382472914",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-default",
              "Project": "nginx-webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-default",
              "Project": "nginx-webserver"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0be0b95a6f9abeb12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:security-group/sg-0d83ac79588278b51",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d83ac79588278b51",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "992382472914",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-default",
              "Project": "nginx-webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-default",
              "Project": "nginx-webserver"
            },
            "vpc_id": "vpc-0be0b95a6f9abeb12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:internet-gateway/igw-05992e49b44679b77",
            "id": "igw-05992e49b44679b77",
            "owner_id": "992382472914",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc",
              "Project": "nginx-webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc",
              "Project": "nginx-webserver"
            },
            "vpc_id": "vpc-0be0b95a6f9abeb12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "igw-05992e49b44679b77",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05992e49b44679b77",
            "id": "r-rtb-08fefddb48811cec11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-08fefddb48811cec1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-08fefddb48811cec1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:route-table/rtb-035c6a9f654879dee",
            "id": "rtb-035c6a9f654879dee",
            "owner_id": "992382472914",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-private",
              "Project": "nginx-webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-private",
              "Project": "nginx-webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be0b95a6f9abeb12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "rtb-035c6a9f654879dee",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:route-table/rtb-08fefddb48811cec1",
            "id": "rtb-08fefddb48811cec1",
            "owner_id": "992382472914",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05992e49b44679b77",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-public",
              "Project": "nginx-webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-public",
              "Project": "nginx-webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be0b95a6f9abeb12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "rtb-08fefddb48811cec1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a138ead3d5cff64",
            "region": "us-east-1",
            "route_table_id": "rtb-035c6a9f654879dee",
            "subnet_id": "subnet-0cea3f1ea0d9789ed"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "rtbassoc-00a138ead3d5cff64",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e9b6fa6020f38c2",
            "region": "us-east-1",
            "route_table_id": "rtb-035c6a9f654879dee",
            "subnet_id": "subnet-0f17fecb53ee6fd95"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "rtbassoc-00e9b6fa6020f38c2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089a634bbf3ec1791",
            "region": "us-east-1",
            "route_table_id": "rtb-08fefddb48811cec1",
            "subnet_id": "subnet-09bf224908a0c4ea4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "rtbassoc-089a634bbf3ec1791",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069c06c566bffbf98",
            "region": "us-east-1",
            "route_table_id": "rtb-08fefddb48811cec1",
            "subnet_id": "subnet-0237be38de446a07a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "rtbassoc-069c06c566bffbf98",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:subnet/subnet-0cea3f1ea0d9789ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cea3f1ea0d9789ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382472914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-private-us-east-1a",
              "Project": "nginx-webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-private-us-east-1a",
              "Project": "nginx-webserver"
            },
            "vpc_id": "vpc-0be0b95a6f9abeb12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "subnet-0cea3f1ea0d9789ed",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:subnet/subnet-0f17fecb53ee6fd95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f17fecb53ee6fd95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382472914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-private-us-east-1b",
              "Project": "nginx-webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-private-us-east-1b",
              "Project": "nginx-webserver"
            },
            "vpc_id": "vpc-0be0b95a6f9abeb12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "subnet-0f17fecb53ee6fd95",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:subnet/subnet-09bf224908a0c4ea4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bf224908a0c4ea4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382472914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-public-us-east-1a",
              "Project": "nginx-webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-public-us-east-1a",
              "Project": "nginx-webserver"
            },
            "vpc_id": "vpc-0be0b95a6f9abeb12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "subnet-09bf224908a0c4ea4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:subnet/subnet-0237be38de446a07a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0237be38de446a07a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382472914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-public-us-east-1b",
              "Project": "nginx-webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc-public-us-east-1b",
              "Project": "nginx-webserver"
            },
            "vpc_id": "vpc-0be0b95a6f9abeb12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "subnet-0237be38de446a07a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382472914:vpc/vpc-0be0b95a6f9abeb12",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c3714a6ec5ccb651",
            "default_route_table_id": "rtb-010e6f3cf00d08042",
            "default_security_group_id": "sg-0d83ac79588278b51",
            "dhcp_options_id": "dopt-02729fa7861976ab7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0be0b95a6f9abeb12",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010e6f3cf00d08042",
            "owner_id": "992382472914",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc",
              "Project": "nginx-webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc",
              "Project": "nginx-webserver"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382472914",
            "id": "vpc-0be0b95a6f9abeb12",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}